# clip_classifier_fast_API

./: README.md  pyproject.toml
clip_classifier/: main.py
clip_classifier/app/: app.py
clip_classifier/pred/: classifier.py
clip_classifier/schemas/: image_schema.py  labels_schema.py
clip_classifier/utils/: utils.py
